Fixed blockquotes being too big

--- a/style.scss
+++ b/style.scss
@@ -227,19 +227,17 @@ img {
 }
 
 .post {
-  blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
-  }
-
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
-  }
+    blockquote {
+        margin: 1.8em .8em;
+        border-left: 2px solid $gray;
+        padding: 0.1em 1em;
+        color: $gray;
+        font-style: italic;
+    }
+    
+    blockquote p:last-child {
+        margin-bottom: 0.4em;
+    }
 }
 
 .post-meta {
